PowerPret/FinalCompiler/src/com/CmmCompiler/interpreter/compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. compiler.java */
package com.CmmCompiler.interpreter;
import java.util.*;
import java.io.*;

/**
*
* @author  PowerPret
* @function compiler.java
*/

public class compiler/*@bgen(jjtree)*/implements compilerTreeConstants, compilerConstants {/*@bgen(jjtree)*/
  protected static JJTcompilerState jjtree = new JJTcompilerState();public static FileInputStream fileStream;
 // 	private static Token tk;
//	private static String errorMsg="";
  //public static int scope=0;

static  Token tk;
static  String errorMsg="";

        public static void error(String message) {
                errorMsg += tk.beginLine + " \u884c  " + tk.beginColumn + " \u5217      "
                                + message + "\n";
                // UserGraphic.println(token.getRow() + "行 " + token.getColumn()
                // +"列     "+ message);
        }

        public static String getErrorMsg() {
                return errorMsg;
        }
 // public static void main(String args[]) throws Exception {
        //	try {
                  //建立parser对象，调用lexical方法对test.cmm进行第一次扫描，并完成词法分析
        //		fileStream = new FileInputStream("test.cmm");
        //	  	compiler parser = new compiler(fileStream);
        //	  	parser.Lexical();
        //	  	fileStream.close();
        //	  	
        //	  //重新初始化parser对象，对test.cmm进行第二次扫描，完成语法及语义分析，打印语法树和符号表，并将运行结果显示在model-console中
        //	  	fileStream = new FileInputStream("test.cmm");
        //	  	parser.ReInit(fileStream);
        //	  	System.out.println("Start syntactical and semantic analyzing......");
        //	  	SimpleNode n = parser.Start();
        //	  	//先建立syntactical_result文件，否则会再dump时报错
        //	  	FileWriter SynFWriter = new FileWriter("Syntactical_result.txt");
        //		SynFWriter.write("");
        //		SynFWriter.close();
        //		n.dump("");
        //		System.out.println("Syntactical_result.txt generated!");
        //		execute exe = new execute(n);
        //		exe.walk();
        //		PrintStream table_stream = new PrintStream(new FileOutputStream("VarTable.txt"));
        //		table_stream.print(exe.varTable.toString());
        //		System.out.println("VarTable.txt generated!");
        //		fileStream.close();  			
        //		
        //	} catch (FileNotFoundException e) {
        //		// TODO Auto-generated catch block
        //		e.printStackTrace();
        //	}
 // }

  private static String[] TokenKindImg={
"", null, null, null, null, null, null, null, null, "\"KWIF\"",
"\"KWELSE\"", "\"KWWHILE\"", "\"KWBREAK\"", "\"KWREAD\"",
"\"KWWRITE\"", "\"KWINT\"", "\"KWDOUBLE\"", "\"KWBOOLEAN\"","\"KWSWITCH\"","\"KWCASE\"","\"KWDEFAULT\"", "\"PLUS\"", "\"MINUS\"",
"\"MULTIPLY\"", "\"DIVIDE\"", "\"MOD\"", "\"LESS_THAN\"", "\"GREATER_THAN\"", "\"LESS_EQUAL\"", "\"GREATER_EQUAL\"", "\"EQUAL\"", "\"NOT_EQUAL\"", "\"ASSIGNMENT\"",
"\"LPARENTHESIS\"", "\"RPARENTHESIS\"", "\"LBRACKET\"", "\"RBRACKET\"", "\"LBLOCK\"", "\"RBLOCK\"", "\"COMMA\"","\"COLON\"", "\"EOL\"", "\"INTEGER_CONSTANT\"", "\"DOUBLE_CONSTANT\"", "\"BOOLEAN_CONSTANT\"", null,
"\"IDENTIFIER\"", null, };


  public final String Lexical()throws FileNotFoundException{
                compilerTokenManager TokenManager=this.token_source;
        //	FileOutputStream lexFOStream = new FileOutputStream("Lexical_result.txt");
        //	PrintStream Lexical_Stream = new PrintStream(lexFOStream);
        //	System.out.println("Start lexical analyzing......");
                String result="";
                String errMsg="";
                String lexical="";
                String sentence="";
                int Line=0;
                Token t;
                lexicalLOOP:
                while(true){
                  try{
                    t=TokenManager.getNextToken();
                  }     catch(TokenMgrError e){
                    errMsg += e.toString()+"\r\n";
                    try {
                      TokenManager.input_stream.readChar();
                      //System.out.println(TokenManager.input_stream.tokenBegin+" "+TokenManager.input_stream.bufpos+" "+TokenManager.input_stream.line+" "+TokenManager.input_stream.column);
                        } catch(IOException ex){
                                errMsg += ex.getMessage()+"\r\n";
                        }
                    continue lexicalLOOP;
                  }

                  if(Line!=0&&Line!=t.beginLine){
                    sentence+="\r\n";
                    result += sentence+lexical;
                    Line=t.beginLine;
                    sentence = "Line:"+Line;
                    lexical = "";
                  } else if(Line==0){
                    Line = t.beginLine;
                    sentence="Line:"+Line;
                  }
                  if(t.specialToken != null){
                    Token tmp_t = t.specialToken;
                        while (tmp_t.specialToken != null) tmp_t = tmp_t.specialToken;

                        while (tmp_t != null) {
                            result += tmp_t.image+"\r\n";
                            tmp_t = tmp_t.next;
                        }
                  }

                  sentence += " "+t.image;
                  if(t.kind==0){
                    break;
                  }
                  if(TokenKindImg[t.kind]==null)lexical+="\t(Line:"+t.beginLine+":"+"\t"+t.image+")"+"  ";
                  else lexical+="\t(Line:"+t.beginLine+":"+"\t"+TokenKindImg[t.kind]+"\t"+t.image+")"+"  ";
                  lexical+="\r\n";
                  //System.out.println("(\t"+t.image+"\t"+t.kind+"\t)");
                }
                //System.out.println("Line:"+Line+sentence);
                //System.out.println(lexical);
//		Lexical_Stream.print(result+errMsg);
//		System.out.println("Lexical_result.txt generated!");
                return result;
  }

  public final String Lexicaler()throws FileNotFoundException{
                compilerTokenManager TokenManager=this.token_source;
        //	FileOutputStream lexFOStream = new FileOutputStream("Lexical_result.txt");
        //	PrintStream Lexical_Stream = new PrintStream(lexFOStream);
        //	System.out.println("Start lexical analyzing......");
                String result="";
                String errMsg="";
                String lexical="";
                String sentence="";
                int Line=0;
                Token t;
                lexicalLOOP:
                while(true){
                  try{
                    t=TokenManager.getNextToken();
                  }     catch(TokenMgrError e){
                    errMsg += e.toString()+"\r\n";
                    try {
                      TokenManager.input_stream.readChar();
                      //System.out.println(TokenManager.input_stream.tokenBegin+" "+TokenManager.input_stream.bufpos+" "+TokenManager.input_stream.line+" "+TokenManager.input_stream.column);
                        } catch(IOException ex){
                                errMsg += ex.getMessage()+"\r\n";
                        }
                    continue lexicalLOOP;
                  }

                  if((Line!=0&&Line!=t.beginLine)||t.kind==0){
                    sentence+="\r\n";
                    result += sentence+lexical;
                    Line=t.beginLine;
                    sentence = "Line:"+Line;
                    lexical = "";
                  } else if(Line==0){
                    Line = t.beginLine;
                    sentence="Line:"+Line;
                  }
                  if(t.specialToken != null){
                    Token tmp_t = t.specialToken;
                        while (tmp_t.specialToken != null) tmp_t = tmp_t.specialToken;

                        while (tmp_t != null) {
                            result += tmp_t.image+"\r\n";
                            tmp_t = tmp_t.next;
                        }
                  }

                  sentence += " "+t.image;
                  if(t.kind==0){
                    break;
                  }
                  if(TokenKindImg[t.kind]==null)lexical+="\t(Line:"+t.beginLine+":"+"\t"+t.image+")"+"  ";
                  else lexical+="\t(Line:"+t.beginLine+":"+"\t"+TokenKindImg[t.kind]+"\t"+t.image+")"+"  ";
                  lexical+="\r\n";
                  //System.out.println("(\t"+t.image+"\t"+t.kind+"\t)");
                }
                //System.out.println("Line:"+Line+sentence);
                //System.out.println(lexical);
//		Lexical_Stream.print(result+errMsg);
//		System.out.println("Lexical_result.txt generated!");
                return errMsg;
  }

  static final public SimpleNode Start() throws ParseException {
                      /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        label_1:
        while (true) {
          Stmt();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case KWIF:
          case KWWHILE:
          case KWBREAK:
          case KWREAD:
          case KWWRITE:
          case KWINT:
          case KWDOUBLE:
          case KWSWITCH:
          case LBLOCK:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
        }
        jj_consume_token(0);
      } catch (ParseException e) {
    System.out.println(e.toString());
        getNextToken();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Stmt() throws ParseException {
              /*@bgen(jjtree) Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case KWINT:
        case KWDOUBLE:
          varDecl();
          break;
        case KWIF:
          IfStmt();
          break;
        case KWSWITCH:
          SwitchStmt();
          break;
        case KWWHILE:
          WhileStmt();
          break;
        case KWBREAK:
          BreakStmt();
          break;
        case IDENTIFIER:
          AssignStmt();
          break;
        case LBLOCK:
          StmtBlock();
          break;
        case KWREAD:
          ReadStmt();
          break;
        case KWWRITE:
          WriteStmt();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
        System.out.println(e.toString());
    Token t;
    do {
      t = getNextToken();
    } while (t.kind != EOL);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void BreakStmt() throws ParseException {
                   /*@bgen(jjtree) BreakStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTBREAKSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(KWBREAK);
      jj_consume_token(EOL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void StmtBlock() throws ParseException {
                   /*@bgen(jjtree) StmtBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBLOCK);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case KWIF:
        case KWWHILE:
        case KWBREAK:
        case KWREAD:
        case KWWRITE:
        case KWINT:
        case KWDOUBLE:
        case KWSWITCH:
        case LBLOCK:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        Stmt();
      }
      try {
        jj_consume_token(RBLOCK);
      } catch (ParseException e) {
      error("Warning: No matched block found at line " + e.currentToken.next.beginLine + ", column " + e.currentToken.next.beginColumn);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

////////////////////////////////////////
//Definition of Variable Declaration
  static final public void varDecl() throws ParseException {
                 /*@bgen(jjtree) varDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      VarList();
      jj_consume_token(EOL);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Type() throws ParseException {
 /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String type;
  String length;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KWINT:
        jj_consume_token(KWINT);
    type = "integer";
    jjtn000.jjtSetValue(type);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          jj_consume_token(LBRACKET);
          tk = jj_consume_token(INTEGER_CONSTANT);
          jj_consume_token(RBRACKET);
        if( Integer.parseInt(tk.image)<0)
        {
                error("Index Should Be Positive Number! \n");
        }
        else{
    length = tk.image;
    jjtn000.jjtSetValue(length);
        }
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        break;
      case KWDOUBLE:
        jj_consume_token(KWDOUBLE);
    type = "double";
    jjtn000.jjtSetValue(type);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          jj_consume_token(LBRACKET);
          tk = jj_consume_token(INTEGER_CONSTANT);
          jj_consume_token(RBRACKET);
    if( Integer.parseInt(tk.image)<0)
        {
                error("Index Should Be Positive Number! \n");
        }
        else{
    length = tk.image;
    jjtn000.jjtSetValue(length);
        }
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

